--- a/cloudformation/hub/hub-infrastructure.yaml
+++ b/cloudformation/hub/hub-infrastructure.yaml
@@ -1,374 +1,200 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Consolidated Hub Infrastructure - VPC, Transit Gateway, and Resource Sharing'
+Description: >
+  Hub VPC with Transit Gateway and external RAM sharing.
+  Spoke VPCs will attach separately.
 
 Parameters:
   EnvironmentName:
-    Description: Environment name prefix for resources
     Type: String
     Default: Hub
-  
-  VpcCIDR:
-    Description: CIDR block for Hub VPC
+
+  HubVpcCIDR:
     Type: String
     Default: 10.0.0.0/16
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
-  
-  PublicSubnet1CIDR:
-    Description: CIDR block for public subnet in AZ1
+
+  HubPublicSubnetCIDR:
     Type: String
     Default: 10.0.1.0/24
-  
-  PublicSubnet2CIDR:
-    Description: CIDR block for public subnet in AZ2
+
+  HubPrivateSubnetCIDR:
     Type: String
     Default: 10.0.2.0/24
-  
-  PrivateSubnet1CIDR:
-    Description: CIDR block for private subnet in AZ1
-    Type: String
-    Default: 10.0.11.0/24
-  
-  PrivateSubnet2CIDR:
-    Description: CIDR block for private subnet in AZ2
-    Type: String
-    Default: 10.0.12.0/24
 
-  TransitGatewayDescription:
-    Description: Description for the Transit Gateway
-    Type: String
-    Default: Central Transit Gateway for multi-account networking
-
-  SpokeAAccountId:
-    Description: AWS Account ID for Spoke A
-    Type: String
-    AllowedPattern: '^\d{12}$'
-    ConstraintDescription: Must be a valid 12-digit AWS Account ID
-
-  SpokeBAccountId:
-    Description: AWS Account ID for Spoke B
-    Type: String
-    AllowedPattern: '^\d{12}$'
-    ConstraintDescription: Must be a valid 12-digit AWS Account ID
-
-  SpokeACIDR:
-    Description: CIDR block for Spoke A VPC
-    Type: String
-    Default: 10.1.0.0/16
-
-  SpokeBCIDR:
-    Description: CIDR block for Spoke B VPC
-    Type: String
-    Default: 10.2.0.0/16
-
-  EnableOrganizationSharing:
-    Description: Enable sharing the Transit Gateway via AWS RAM with an Organization ARN (true/false)
-    Type: String
-    Default: 'false'
-    AllowedValues:
-      - 'true'
-      - 'false'
-
-  OrganizationArn:
-    Description: ARN of the AWS Organization or OU to share the TGW with (leave blank to disable)
-    Type: String
-    Default: ''
-
-Conditions:
-  UseOrgSharing: !And
-    - !Equals [ !Ref EnableOrganizationSharing, 'true' ]
-    - !Not [ !Equals [ !Ref OrganizationArn, '' ] ]
 Resources:
-  # ============================================================================
-  # VPC Resources
-  # ============================================================================
-  
-  VPC:
+
+  #################################################
+  # HUB VPC
+  #################################################
+  HubVPC:
     Type: AWS::EC2::VPC
     Properties:
-      CidrBlock: !Ref VpcCIDR
-      EnableDnsHostnames: true
+      CidrBlock: !Ref HubVpcCIDR
       EnableDnsSupport: true
+      EnableDnsHostnames: true
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-VPC
-        - Key: Environment
-          Value: !Ref EnvironmentName
 
-  InternetGateway:
+  #################################################
+  # Internet Gateway
+  #################################################
+  HubIGW:
     Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-IGW
 
-  InternetGatewayAttachment:
+  HubIGWAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
-      InternetGatewayId: !Ref InternetGateway
-      VpcId: !Ref VPC
+      VpcId: !Ref HubVPC
+      InternetGatewayId: !Ref HubIGW
 
-  # Public Subnets
-  PublicSubnet1:
+  #################################################
+  # Subnets
+  #################################################
+  HubPublicSubnet:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
+      VpcId: !Ref HubVPC
+      CidrBlock: !Ref HubPublicSubnetCIDR
       AvailabilityZone: !Select [0, !GetAZs '']
-      CidrBlock: !Ref PublicSubnet1CIDR
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${EnvironmentName}-Public-Subnet-AZ1
-        - Key: Type
-          Value: Public
+          Value: !Sub ${EnvironmentName}-Public-Subnet
 
-  PublicSubnet2:
+  HubPrivateSubnet:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs '']
-      CidrBlock: !Ref PublicSubnet2CIDR
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-Public-Subnet-AZ2
-        - Key: Type
-          Value: Public
-
-  # Private Subnets
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
+      VpcId: !Ref HubVPC
+      CidrBlock: !Ref HubPrivateSubnetCIDR
       AvailabilityZone: !Select [0, !GetAZs '']
-      CidrBlock: !Ref PrivateSubnet1CIDR
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub ${EnvironmentName}-Private-Subnet-AZ1
-        - Key: Type
-          Value: Private
+          Value: !Sub ${EnvironmentName}-Private-Subnet
 
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs '']
-      CidrBlock: !Ref PrivateSubnet2CIDR
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-Private-Subnet-AZ2
-        - Key: Type
-          Value: Private
-
-  # Public Route Table
-  PublicRouteTable:
+  #################################################
+  # Route Tables
+  #################################################
+  HubPublicRT:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-Public-Routes
+      VpcId: !Ref HubVPC
 
-  DefaultPublicRoute:
+  HubPublicRoute:
     Type: AWS::EC2::Route
-    DependsOn: InternetGatewayAttachment
+    DependsOn: HubIGWAttachment
     Properties:
-      RouteTableId: !Ref PublicRouteTable
+      RouteTableId: !Ref HubPublicRT
       DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
+      GatewayId: !Ref HubIGW
 
-  PublicSubnet1RouteTableAssociation:
+  HubPublicRTAssoc:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet1
+      SubnetId: !Ref HubPublicSubnet
+      RouteTableId: !Ref HubPublicRT
 
-  PublicSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet2
-
-  # Private Route Tables
-  PrivateRouteTable1:
+  HubPrivateRT:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-Private-Routes-AZ1
+      VpcId: !Ref HubVPC
 
-  PrivateSubnet1RouteTableAssociation:
+  HubPrivateRTAssoc:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      RouteTableId: !Ref PrivateRouteTable1
-      SubnetId: !Ref PrivateSubnet1
+      SubnetId: !Ref HubPrivateSubnet
+      RouteTableId: !Ref HubPrivateRT
 
-  PrivateRouteTable2:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-Private-Routes-AZ2
-
-  PrivateSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable2
-      SubnetId: !Ref PrivateSubnet2
-
-  # ============================================================================
-  # Transit Gateway Resources
-  # ============================================================================
-  
+  #################################################
+  # TRANSIT GATEWAY
+  #################################################
   TransitGateway:
     Type: AWS::EC2::TransitGateway
     Properties:
       AmazonSideAsn: 64512
-      Description: !Ref TransitGatewayDescription
       AutoAcceptSharedAttachments: enable
-      DefaultRouteTableAssociation: enable
-      DefaultRouteTablePropagation: enable
+      DefaultRouteTableAssociation: disable
+      DefaultRouteTablePropagation: disable
       DnsSupport: enable
       VpnEcmpSupport: enable
       Tags:
         - Key: Name
           Value: !Sub ${EnvironmentName}-TGW
 
-  HubVPCAttachment:
+  #################################################
+  # TGW ROUTE TABLE
+  #################################################
+  TGWRouteTable:
+    Type: AWS::EC2::TransitGatewayRouteTable
+    Properties:
+      TransitGatewayId: !Ref TransitGateway
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvironmentName}-TGW-RT
+
+  #################################################
+  # HUB VPC ATTACHMENT
+  #################################################
+  HubTGWAttachment:
     Type: AWS::EC2::TransitGatewayAttachment
     Properties:
       TransitGatewayId: !Ref TransitGateway
-      VpcId: !Ref VPC
+      VpcId: !Ref HubVPC
       SubnetIds:
-        - !Ref PrivateSubnet1
-        - !Ref PrivateSubnet2
+        - !Ref HubPrivateSubnet
       Tags:
         - Key: Name
-          Value: !Sub ${EnvironmentName}-VPC-TGW-Attachment
+          Value: !Sub ${EnvironmentName}-Hub-Attachment
 
-  # Routes to Spoke VPCs via Transit Gateway
-  HubPrivateRoute1ToSpokeA:
-    Type: AWS::EC2::Route
-    DependsOn: HubVPCAttachment
+  #################################################
+  # TGW ASSOCIATION & PROPAGATION
+  #################################################
+  HubTGWAssociation:
+    Type: AWS::EC2::TransitGatewayRouteTableAssociation
     Properties:
-      RouteTableId: !Ref PrivateRouteTable1
-      DestinationCidrBlock: !Ref SpokeACIDR
+      TransitGatewayAttachmentId: !Ref HubTGWAttachment
+      TransitGatewayRouteTableId: !Ref TGWRouteTable
+
+  HubTGWPropagation:
+    Type: AWS::EC2::TransitGatewayRouteTablePropagation
+    Properties:
+      TransitGatewayAttachmentId: !Ref HubTGWAttachment
+      TransitGatewayRouteTableId: !Ref TGWRouteTable
+
+  #################################################
+  # HUB ROUTE TO TGW
+  #################################################
+  HubPrivateRouteToTGW:
+    Type: AWS::EC2::Route
+    DependsOn: HubTGWAttachment
+    Properties:
+      RouteTableId: !Ref HubPrivateRT
+      DestinationCidrBlock: 10.0.0.0/8
       TransitGatewayId: !Ref TransitGateway
 
-  HubPrivateRoute2ToSpokeA:
-    Type: AWS::EC2::Route
-    DependsOn: HubVPCAttachment
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable2
-      DestinationCidrBlock: !Ref SpokeACIDR
-      TransitGatewayId: !Ref TransitGateway
-
-  HubPrivateRoute1ToSpokeB:
-    Type: AWS::EC2::Route
-    DependsOn: HubVPCAttachment
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable1
-      DestinationCidrBlock: !Ref SpokeBCIDR
-      TransitGatewayId: !Ref TransitGateway
-
-  HubPrivateRoute2ToSpokeB:
-    Type: AWS::EC2::Route
-    DependsOn: HubVPCAttachment
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable2
-      DestinationCidrBlock: !Ref SpokeBCIDR
-      TransitGatewayId: !Ref TransitGateway
-
-  # ============================================================================
-  # Resource Access Manager - Share Transit Gateway with Spoke Accounts
-  # ============================================================================
-  
-  TransitGatewayResourceShare:
-    Condition: UseOrgSharing
+  #################################################
+  # RAM SHARING (EXTERNAL SPOKE ACCOUNTS)
+  #################################################
+  TGWRAMShare:
     Type: AWS::RAM::ResourceShare
     Properties:
-      Name: !Sub ${EnvironmentName}-TGW-Share
-      AllowExternalPrincipals: false
+      Name: TGW-External-Share
+      AllowExternalPrincipals: true
       Principals:
-        - !Ref OrganizationArn
+        - '417371242369'
+        - '414329322210'
       ResourceArns:
-        - !Sub 'arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${TransitGateway}'
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvironmentName}-TGW-Share
-        - Key: Environment
-          Value: !Ref EnvironmentName
+        - !Sub arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:transit-gateway/${TransitGateway}
 
 Outputs:
-  # VPC Outputs
-  VPC:
+  HubVpcId:
     Description: Hub VPC ID
-    Value: !Ref VPC
-    Export:
-      Name: !Sub ${EnvironmentName}-VPC-ID
+    Value: !Ref HubVPC
 
-  VpcCIDR:
-    Description: Hub VPC CIDR
-    Value: !Ref VpcCIDR
-    Export:
-      Name: !Sub ${EnvironmentName}-VPC-CIDR
-
-  PublicSubnet1:
-    Description: Public Subnet in AZ1
-    Value: !Ref PublicSubnet1
-    Export:
-      Name: !Sub ${EnvironmentName}-PublicSubnet1-ID
-
-  PublicSubnet2:
-    Description: Public Subnet in AZ2
-    Value: !Ref PublicSubnet2
-    Export:
-      Name: !Sub ${EnvironmentName}-PublicSubnet2-ID
-
-  PrivateSubnet1:
-    Description: Private Subnet in AZ1
-    Value: !Ref PrivateSubnet1
-    Export:
-      Name: !Sub ${EnvironmentName}-PrivateSubnet1-ID
-
-  PrivateSubnet2:
-    Description: Private Subnet in AZ2
-    Value: !Ref PrivateSubnet2
-    Export:
-      Name: !Sub ${EnvironmentName}-PrivateSubnet2-ID
-
-  PrivateRouteTable1:
-    Description: Private Route Table AZ1
-    Value: !Ref PrivateRouteTable1
-    Export:
-      Name: !Sub ${EnvironmentName}-PrivateRouteTable1-ID
-
-  PrivateRouteTable2:
-    Description: Private Route Table AZ2
-    Value: !Ref PrivateRouteTable2
-    Export:
-      Name: !Sub ${EnvironmentName}-PrivateRouteTable2-ID
-
-  # Transit Gateway Outputs
   TransitGatewayId:
     Description: Transit Gateway ID
     Value: !Ref TransitGateway
-    Export:
-      Name: !Sub ${EnvironmentName}-TGW-ID
 
-  HubVPCAttachmentId:
-    Description: Hub VPC Transit Gateway Attachment ID
-    Value: !Ref HubVPCAttachment
-    Export:
-      Name: !Sub ${EnvironmentName}-VPC-TGW-Attachment-ID
-
-  # Resource Share Outputs
-  ResourceShareArn:
-    Description: Transit Gateway Resource Share ARN
-    Condition: UseOrgSharing
-    Value: !Ref TransitGatewayResourceShare
-    Export:
-      Name: !Sub ${EnvironmentName}-TGW-ResourceShare-ARN
+  TGWRouteTableId:
+    Description: Transit Gateway Route Table ID
+    Value: !Ref TGWRouteTable
